objects/DMAPP__Dealmaker_Send_Usage_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Setting for sending of usage stats</description>
    <fields>
        <fullName>DMAPP__CC_Email__c</fullName>
        <description>CC email field for sending of  usage stats emails.</description>
        <label>CC Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Send_Usage_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Send Usage Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Send_Usage_Batch_Execution_Time__c</fullName>
        <label>Send Usage Batch Execution Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Target_Email__c</fullName>
        <description>Target email address for sending of usage stats</description>
        <label>Target Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Dealmaker Send Usage Settings</label>
</CustomObject>